@@ -7,6 +7,7 @@
 - improved printing of triplets and ties
 - fixed vertical centering of tracks + fixed assertion failure
 - hide empty lines when printing
+- improved silence printing
 
 1.2b6
 - Printing improvements :
